Trying the new docker packaging workflow